2008-02-21  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/comm_msg.c (comm_msg_pack_mem): Get rid of cur variable,
	and change msg->used after having copied the data.
	(comm_msg_unpack_mem): Likewise. Add a check to make sure it does not
	read outside the buffer. Remove error message.

2008-02-21  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/comm_msg.h (comm_msg_grow): Add a need_size argument.
	(comm_msg_grow): Likewise. Remove implicit end_size calculations.
	Fix all callers.
	(comm_msg_pack_mem): Check comm_msg_grow return code and set
	msg->used after calling it.
	(comm_msg_recv): Likewise.

2008-02-21  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/test_lib.h (test_success): New function declaration.
	(test_failure): Likewise.
	* launcher/test_lib.c (test_success): New function.
	(test_failure): Likewise.

2008-01-25  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/comm_msg.h (comm_msg_reset): New function declaration.
	* launcher/comm_msg.c (comm_msg_reset): New function.

2008-01-25  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/prog.h (sprog_t): Make filename member const.
	(set_progname): Make progname argument const.
	* launcher/prog.c (set_progname): Likewise.

2008-01-10  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/Makefile.am (maemo_launcher_SOURCES): Add 'comm_msg.c' and
	'comm_msg.h'.
	* launcher/launcher.c: Include "comm_msg.h".
	(LAUNCHER_STATEFILE): New macro.
	(statefilename): New variable.
	(sigreexec_catched): Likewise.
	(clean_daemon): Unlink statefilename.
	(LAUNCHER_STATE_SIG): New macro.
	(store_state): New function.
	(load_state): Likewise.
	(sigreexec_handler): Likewise.
	(sigs_init): Initialize SIGUSR1 to sigreexec_handler.
	(sigs_restore): Restore SIGUSR1.
	(sigs_interrupt): Allow SIGUSR1 to interrupt syscalls.
	(main): Try to load the state file, and fallback to normal
	initialization if that fails. Only daemonize and create a pid file